syntax = "proto3";
// 指定包路径
option go_package = "/test";
option java_multiple_files = true;
option java_outer_classname = "testProto";

package test;

message HelloRequest {
  string username = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse){}
}